--- a/html/jp_index.html
+++ b/html/jp_index.html
@@ -184,5 +184,81 @@
         </div>
         </div>
     </aside>
+
+    <div class="line"></div>
+
+<article id="certificate">
+    <div class="article_container">
+        <div class="article_title">
+            <h2>資格：</h2>
+        </div>
+        <div class="article_content">
+            <div class="article_content_title">
+                <h3>FreeCodeCamp</h3>
+                <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design" target="_blank">
+                    <img src="../upload/images/FCC_Certificate.png" alt="FreeCodeCamp">
+                </a>
+            </div>
+            <div class="article_content_title">
+                <h3>未来塾</h3>
+                <a href="https://lienschool.com/" target="_blank">
+                    <img src="" alt="">準備中...
+                </a>
+            </div>
+        </div>
+    </div>
+</article>
+
+<div class="line"></div>
+
+<article id="works">
+    実績
+</article>
+
+<div class="line"></div>
+
+<footer id="contact">
+    <div class="contact_container">
+        <div class="contact_list">
+            <div class="contact_list_info">
+                <img src="../upload/images/call.png" alt="電話">
+                <p>090-9923-3642</p>
+            </div>
+        </div>
+
+        <div class="contact_list">
+            <div class="contact_list_info">
+                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">
+                    <img src="../upload/images/email.png" alt="メール">
+                    <p>joharrywork@gmail.com</p>
+                </a>
+            </div>
+        </div>
+        <div class="contact_list">
+            <div class="contact_list_info">
+                <a href="https://www.linkedin.com/in/jujuwork/" target="_blank">
+                    <img src="../upload/images/linkedin.png" alt="LinkedIn">
+                    <p>LinkedIn</p>
+                </a>
+            </div>
+        </div>
+        <div class="contact_list">
+            <div class="contact_list_info">
+                <a href="https://www.facebook.com/jujuwork1024/" target="_blank">
+                    <img src="../upload/images/facebook.png" alt="Facebook">
+                    <p>Facebook</p>
+                </a>
+            </div>
+        </div>
+        <div class="contact_list">
+            <div class="contact_list_info">
+                <a href="https://www.instagram.com/bb8juju/" target="_blank">
+                    <img src="../upload/images/instagram.png" alt="Instagram">
+                    <p>Instagram</p>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
