--- a/html/jp_index.html
+++ b/html/jp_index.html
@@ -6,16 +6,16 @@
     <title>ポートフォリオ</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/index_jp.css">
+    <link rel="stylesheet" href="../css/index_eng.css">
 
-    <!-- FONT -->
+    <!-- フォント -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-     <!-- Javascript -->
+    <!-- Javascript -->
     <script src="../javascript/index_html.js"></script>
 </head>
 <body>
@@ -24,17 +24,19 @@
         <ul id="home">
             <li>ジョハリー・サンチェス</li>
             <li><a href="#home">ホーム</a></li>
-            <li><a href="#work">職務経歴</a></li>
+            <li><a href="#work">職歴</a></li>
             <li><a href="#skills">スキル</a></li>
-            <li><a href="">お問い合わせ</a></li>
+            <li><a href="#certificate">資格</a></li>
+            <li><a href="#works">作品</a></li>
+            <li><a href="#contact">お問い合わせ</a></li>
         </ul>
     </nav>
 
     <header>
         <div class="greetings">
             <p>こんにちは！</p>
-            <p>ジョハリー・サンチェス、ジュニアウェブ開発者です。</p>
-            <p>愛知県、日本在住。</p>
+            <p>ジョハリー・サンチェスです。ジュニアWeb開発者</p>
+            <p>日本、愛知県在住</p>
         </div>
         <div class="personal">
             <div class="personal_profile">
@@ -69,7 +71,9 @@
                     </tr>
                     <tr>
                         <td>ウェブサイト：</td>
-                        <td>www.github.com</td>
+                        <td>
+                            <a href="https://github.com/jujuWork" target="_blank">Github</a>
+                        </td>
                     </tr>
                 </table>
             </div>
@@ -81,7 +85,7 @@
     <section id="work">
         <div class="work_exp">
             <span>
-                <h2>職務経歴：</h2>
+                <h2>職歴：</h2>
             </span>
 
             <div class="container">
@@ -90,14 +94,14 @@
                     <p>2016年7月 ～ 現在</p>
                 </div>
                 <div class="company_business">
-                   <ul>
-                    <h3>仕事内容：</h3>
-                    <li>NC旋盤機の操作およびプログラミング</li>
-                    <li>プラスチック、アルミニウム、真鍮の加工</li>
-                    <li>生産工程の改善提案および実施</li>
-                    <li>チームリーダーとして6ヶ月間の新人研修担当</li>
-                    <li>生産性向上のための新技術導入</li>
-                   </ul>
+                    <ul>
+                        <h3>仕事内容：</h3>
+                        <li>NC旋盤の操作およびプログラミング</li>
+                        <li>プラスチック、アルミ、真鍮の加工</li>
+                        <li>生産工程の改善提案と実施</li>
+                        <li>チームリーダーとして半年間、新人教育を担当</li>
+                        <li>生産性向上のための新技術導入</li>
+                    </ul>
                 </div>
             </div>
 
@@ -105,17 +109,17 @@
 
             <div class="container">
                 <div class="company">
-                    <h3>木村メタル</h3>
+                    <h3>木村金属</h3>
                     <p>2015年2月 ～ 2016年6月</p>
                 </div>
                 <div class="company_business">
-                   <ul>
-                    <h3>仕事内容：</h3>
-                    <li>金属構造物の溶接作業</li>
-                    <li>銅線のリサイクル</li>
-                    <li>古いコンピュータ部品の分解および再利用</li>
-                    <li>作業効率向上のための新しいプロセスの提案</li>
-                   </ul>
+                    <ul>
+                        <h3>仕事内容：</h3>
+                        <li>金属構造物の溶接作業</li>
+                        <li>銅線のリサイクル</li>
+                        <li>古いパソコン部品の分解および再利用</li>
+                        <li>作業効率向上のための工程改善提案</li>
+                    </ul>
                 </div>
             </div>
 
@@ -127,14 +131,15 @@
                     <p>2011年8月 ～ 2015年1月</p>
                 </div>
                 <div class="company_business">
-                   <ul>
-                    <h3>仕事内容：</h3>
-                    <li>パチンコ会社（検査、組立、梱包）</li>
-                    <li>ビスケット工場（梱包、検査）</li>
-                    <li>自動車部品工場（プレス加工、梱包、検査）</li>
-                   </ul>
+                    <ul>
+                        <h3>仕事内容：</h3>
+                        <li>パチンコ会社（検査、組立、梱包）</li>
+                        <li>ビスケット工場（梱包、検査）</li>
+                        <li>自動車部品工場（プレス、梱包、検査）</li>
+                    </ul>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -145,9 +150,9 @@
             <span>
                 <h2>スキル：</h2>
             </span>
-        <div class="aside_container">
-            <div class="prog_container">
-                <h3>プログラミング言語：</h3>
+            <div class="aside_container">
+                <div class="prog_container">
+                    <h3>プログラミング言語：</h3>
 
                     <div class="skill_container">
                         <p class="skill_name">HTML</p>
@@ -162,103 +167,135 @@
                         </div>
                     </div>
                     <div class="skill_container">
+                        <p class="skill_name">Javascript</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="js_bar">0%</div>
+                        </div>
+                    </div>
+                    <div class="skill_container">
                         <p class="skill_name">PHP</p>
                         <div class="progressbar_container">
                             <div class="progressbar" id="php_bar">0%</div>
                         </div>
                     </div>
-                <h3>データベース：</h3>
+
+                    <h3>データベース：</h3>
+
                     <div class="skill_container">
                         <p class="skill_name">MySQL</p>
                         <div class="progressbar_container">
                             <div class="progressbar" id="mysql_bar">0%</div>
                         </div>
                     </div>
-            </div>
-            <div class="tools_container">
-                <h3>ツール：</h3>
-                <div class="tool_container">
-                    <p class="tool_name">Visual Studio Code</p>
                 </div>
+
+                <div class="prog_container">
+                    <h3>言語：</h3>
+
+                    <div class="skill_container">
+                        <p class="skill_name">ビサヤ語</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="bisaya_bar">0%</div>
+                        </div>
+                    </div>
+                    <div class="skill_container">
+                        <p class="skill_name">タガログ語</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="tagalog_bar">0%</div>
+                        </div>
+                    </div>
+                    <div class="skill_container">
+                        <p class="skill_name">英語</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="english_bar">0%</div>
+                        </div>
+                    </div>
+                    <div class="skill_container">
+                        <p class="skill_name">日本語</p>
+                        <div class="progressbar_container">
+                            <div class="progressbar" id="japanese_bar">0%</div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-        </div>
         </div>
     </aside>
 
     <div class="line"></div>
 
-<article id="certificate">
-    <div class="article_container">
-        <div class="article_title">
-            <h2>資格：</h2>
-        </div>
-        <div class="article_content">
-            <div class="article_content_title">
-                <h3>FreeCodeCamp</h3>
-                <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design" target="_blank">
-                    <img src="../upload/images/FCC_Certificate.png" alt="FreeCodeCamp">
-                </a>
+    <article id="certificate">
+        <div class="article_container">
+            <div class="article_title">
+                <h2>資格：</h2>
             </div>
-            <div class="article_content_title">
-                <h3>未来塾</h3>
-                <a href="https://lienschool.com/" target="_blank">
-                    <img src="" alt="">準備中...
-                </a>
+            <div class="article_content">
+                <div class="article_content_title">
+                    <h3>FreeCodeCamp</h3>
+                    <a href="https://www.freecodecamp.org/certification/fcc9b66b169-c41e-47cc-a48a-a7011e85fc88/responsive-web-design" target="_blank">
+                        <img src="../upload/images/FCC_Certificate.png" alt="FreeCodeCamp">
+                    </a>
+                </div>
+                <div class="article_content_title">
+                    <h3>未来塾</h3>
+                    <a href="https://lienschool.com/" target="_blank">
+                        <img src="" alt="">準備中...
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
-</article>
+    </article>
 
-<div class="line"></div>
+    <div class="line"></div>
 
-<article id="works">
-    実績
-</article>
+    <article id="works">
+        作品
+    </article>
 
-<div class="line"></div>
+    <div class="line"></div>
 
-<footer id="contact">
-    <div class="contact_container">
-        <div class="contact_list">
-            <div class="contact_list_info">
-                <img src="../upload/images/call.png" alt="電話">
-                <p>090-9923-3642</p>
+    <footer id="contact">
+        <div class="contact_container">
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <img src="../upload/images/call.png" alt="電話">
+                    <p>090-9923-3642</p>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">
+                        <img src="../upload/images/email.png" alt="メール">
+                        <p>joharrywork@gmail.com</p>
+                    </a>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <a href="https://www.linkedin.com/in/jujuwork/" target="_blank">
+                        <img src="../upload/images/linkedin.png" alt="LinkedIn">
+                        <p>LinkedIn</p>
+                    </a>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <a href="https://www.facebook.com/jujuwork1024/" target="_blank">
+                        <img src="../upload/images/facebook.png" alt="Facebook">
+                        <p>Facebook</p>
+                    </a>
+                </div>
+            </div>
+            <div class="contact_list">
+                <div class="contact_list_info">
+                    <a href="https://www.instagram.com/bb8juju/" target="_blank">
+                        <img src="../upload/images/instagram.png" alt="Instagram">
+                        <p>Instagram</p>
+                    </a>
+                </div>
             </div>
         </div>
+    </footer>
 
-        <div class="contact_list">
-            <div class="contact_list_info">
-                <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">
-                    <img src="../upload/images/email.png" alt="メール">
-                    <p>joharrywork@gmail.com</p>
-                </a>
-            </div>
-        </div>
-        <div class="contact_list">
-            <div class="contact_list_info">
-                <a href="https://www.linkedin.com/in/jujuwork/" target="_blank">
-                    <img src="../upload/images/linkedin.png" alt="LinkedIn">
-                    <p>LinkedIn</p>
-                </a>
-            </div>
-        </div>
-        <div class="contact_list">
-            <div class="contact_list_info">
-                <a href="https://www.facebook.com/jujuwork1024/" target="_blank">
-                    <img src="../upload/images/facebook.png" alt="Facebook">
-                    <p>Facebook</p>
-                </a>
-            </div>
-        </div>
-        <div class="contact_list">
-            <div class="contact_list_info">
-                <a href="https://www.instagram.com/bb8juju/" target="_blank">
-                    <img src="../upload/images/instagram.png" alt="Instagram">
-                    <p>Instagram</p>
-                </a>
-            </div>
-        </div>
-    </div>
-</footer>
 </body>
 </html>
