--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="/mock_website/css/yoga_media.css">
 </head>
 <body>
-    
+
     <header>HEADER</header>
     <nav>NAVIGATION</nav>
-    <section>SECTION</section>
+    <!-- <section>SECTION</section>
     <article>ARTICLE</article>
     <aside>ASIDE</aside>
-    <footer>FOOTER</footer>
+    <footer>FOOTER</footer> -->
 
 </body>
 </html>
