--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -10,7 +10,17 @@
 </head>
 <body>
 
-    <header>HEADER</header>
+    <header>
+        <div class="container">
+            <ul>
+                <li>instagram</li>
+                <li>facebook</li>
+                <li>Twitter</li>
+                <li>Yoga logo</li>
+                <li>Search box</li>
+            </ul>
+        </div>
+    </header>
     <nav>NAVIGATION</nav>
     <!-- <section>SECTION</section>
     <article>ARTICLE</article>
