--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </header>
-    <nav>NAVIGATION</nav>
+    <!-- <nav>NAVIGATION</nav> -->
     <!-- <section>SECTION</section>
     <article>ARTICLE</article>
     <aside>ASIDE</aside>
