--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -13,11 +13,21 @@
     <header>
         <div class="container">
             <ul>
-                <li>instagram</li>
-                <li>facebook</li>
-                <li>Twitter</li>
-                <li>Yoga logo</li>
-                <li>Search box</li>
+                <li>
+                    <img src="../../upload/images/yoga_instagram.png" alt="instagram">
+                </li>
+                <li>
+                    <img src="../../upload/images/yoga_facebook.png" alt="facebook">
+                </li>
+                <li>
+                    <img src="../../upload/images/yoga_twitter.png" alt="twitter">
+                </li>
+                <li>
+                    <img src="../../upload/images/yoga_calendar.png" alt="yoga">
+                </li>
+                <li>
+                    <input type="search" placeholder="Search">
+                </li>
             </ul>
         </div>
     </header>
