--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -30,6 +30,9 @@
                 </li>
             </ul>
         </div>
+        <div class="container_2">
+            <div class="header_image"> background image</div>
+        </div>
     </header>
     <!-- <nav>NAVIGATION</nav> -->
     <!-- <section>SECTION</section>
