--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -31,7 +31,10 @@
             </ul>
         </div>
         <div class="container_2">
-            <div class="header_image"> background image</div>
+            <div class="header_image">
+                <img src="../../upload/images/yoga.jpg" alt="yoga">
+                    <p>Yoga Schedule's</p>
+            </div>
         </div>
     </header>
     <!-- <nav>NAVIGATION</nav> -->
