--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -31,10 +31,7 @@
             </ul>
         </div>
         <div class="container_2">
-            <div class="header_image">
-                <img src="../../upload/images/yoga.jpg" alt="yoga">
-                    <p>Yoga Schedule's</p>
-            </div>
+            <p>Yoga Schedule's Reservation</p>
         </div>
     </header>
     <!-- <nav>NAVIGATION</nav> -->
