--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="header_container">
             <ul>
                 <li>
                     <img src="../../upload/images/yoga_instagram.png" alt="instagram">
@@ -30,11 +30,21 @@
                 </li>
             </ul>
         </div>
-        <div class="container_2">
+        <div class="header_container_2">
             <p>Yoga Schedule's Reservation</p>
         </div>
     </header>
-    <!-- <nav>NAVIGATION</nav> -->
+    <nav>
+        <div class="nav_container">
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li>Classes</li>
+                <li>Contact Us</li>
+            </ul>
+        </div>
+    </nav>
     <!-- <section>SECTION</section>
     <article>ARTICLE</article>
     <aside>ASIDE</aside>
