--- a/mock_website/html/yoga.html
+++ b/mock_website/html/yoga.html
@@ -37,11 +37,21 @@
     <nav>
         <div class="nav_container">
             <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Services</li>
-                <li>Classes</li>
-                <li>Contact Us</li>
+                <li>
+                    <a href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About Us</a>
+                </li>
+                <li>
+                    <a href="#service">Service</a>
+                </li>
+                <li>
+                    <a href="#class">Classes</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact Us</a>
+                </li>
             </ul>
         </div>
     </nav>
