--- a/Javascript_Seminar/js02.html
+++ b/Javascript_Seminar/js02.html
@@ -7,17 +7,27 @@
 </head>
 <body>
     <ul></ul>
+    <label>価格： <input type="number"></label>
+    let price = 0;
     <script>
         const items = [
             {name: 'Apple', price: 100},
             {name: 'Peach', price: 150},
             {name: 'Orange', price: 80}
         ];
-        const highprice = items.filter((p) => {return p.price >= 100 })
 
-        const itemTag = highprice.map((item) => { return `<li>${item.name}</li>` }).join('');
-        const ultag = document.querySelector('ul');
-        ultag.insertAdjacentHTML('afterbegin', itemTag);
+        document.querySelector('input').addEventListener('focusout' , (e) => {
+            price = Number(e.currentTarget.value);
+            document.querySelector('ul').innerHTML = '';
+
+            const highprice = items.filter((p) => {return p.price >= price })
+
+            const itemTag = highprice.map((item) => { return `<li>${item.name}</li>` }).join('');
+            const ultag = document.querySelector('ul');
+            ultag.insertAdjacentHTML('afterbegin', itemTag);
+        });
+
+
     </script>
 </body>
 </html>
