--- a/ztest.html
+++ b/ztest.html
@@ -6,7 +6,7 @@
     <title>Joharry Sanchez - Portfolio</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/index_eng.css">
+    <link rel="stylesheet" href="ztest.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,300&display=swap" rel="stylesheet">
 
     <!-- JAVASCRIPT -->
-    <script src="../javascript/index_html.js"></script>
+    <script src="ztest.js"></script>
     
 </head>
 <body>
