--- a/z1test.html
+++ b/z1test.html
@@ -4,15 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serene Yoga Studio</title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="../../mock_website/css/yoga.css">
+    <link rel="stylesheet" href="z1test.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <!-- Javascript -->
-    <script src="../../mock_website/javascript/yoga.js"></script>
-
-
 </head>
 <body>
     <header>
@@ -143,6 +136,6 @@
         <p>&copy; 2023 Serene Yoga Studio. All rights reserved.</p>
     </footer>
 
-
+    <script src="z1test.js"></script>
 </body>
 </html>
