--- a/html/index.html
+++ b/html/index.html
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                 </div>
-                                <div class="project-slide">
+                <div class="project-slide">
                     <div class="project-card">
                         <div class="project-thubmnail">
                             <img src="landingpage2.jpg" alt="Landing Page 2">
@@ -343,6 +343,33 @@
                     <div class="project-card">
                         <div class="project-thumbnail">
                             <img src="home1.jph" alt="Home Page 1">
+                        </div>
+                        <div class="project-info">
+                            <h3>Business Homepage</h3>
+                            <p>A professional home for small business</p>
+                            <div class="project-tags">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>Javascript</span>
+                            </div>
+                            <a href="#" class="project-link">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                 <div class="project-slide">
+                    <div class="project-card">
+                        <div class="project-thumbnail">
+                            <img src="home1.jph" alt="Home Page 2">
+                        </div>
+                        <div class="project-info">
+                            <h3>Restaurant Homepage</h3>
+                            <p>A homepage design for restaurants</p>
+                            <div class="project-tags">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>Javascript</span>
+                            </div>
+                            <a href="#" class="project-link">View Project</a>
                         </div>
                     </div>
                 </div>
