--- a/html/index.html
+++ b/html/index.html
@@ -337,8 +337,8 @@
                 </div>
              </div>
 
-             <!-- Home Pages Projects -->
-              <div class="catergory-projects" id="home-pages" style="display: none;">
+            <!-- Home Pages Projects -->
+            <div class="catergory-projects" id="home-pages" style="display: none;">
                 <div class="project-slide">
                     <div class="project-card">
                         <div class="project-thumbnail">
@@ -373,15 +373,48 @@
                         </div>
                     </div>
                 </div>
-              </div>
+            </div>
 
 
-
-
-
-
-
-
+            <!-- PHP Websites Projects -->
+             <div class="category-projects" id="php-websites" style="display: none;">
+                <div class="project-slide">
+                    <div class="project-card">
+                        <div class="project-thumbnail">
+                            <img src="php1.jpg" alt="PHP website 1">
+                        </div>
+                        <div class="project-info">
+                            <h3>Simple Message Board</h3>
+                            <p>A PHP-base Message Board for the town community.</p>
+                            <div class="project-tags">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>PHP</span>
+                                <span>MySQL</span>
+                            </div>
+                            <a href="#" class="project-link">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-slide">
+                    <div class="project-card">
+                        <div class="project-thumbnail">
+                            <img src="php1.jpg" alt="PHP website 1">
+                        </div>
+                        <div class="project-info">
+                            <h3>Simple Message Board</h3>
+                            <p>A PHP-base Message Board for the town community.</p>
+                            <div class="project-tags">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>PHP</span>
+                                <span>MySQL</span>
+                            </div>
+                            <a href="#" class="project-link">View Project</a>
+                        </div>
+                    </div>
+                </div>
+             </div>
         </div>
     </section>
 
