--- a/html/index.html
+++ b/html/index.html
@@ -260,43 +260,45 @@
 
             <!-- Right Side Project Display -->
             <div class="projects-display">
-                <!-- Project Carousel Container -->
-                 <div class="catergory-projects" id="personal-portfolio">
-                    <div class="project-slide">
-                        <div class="project-card">
-                            <div class="project-thumbnail">
-                                <img src="portfolio.jp" alt="Portfolio Project 1">
-                            </div>
-                            <div class="project-info">
-                                <h3>Personal Portfolio - Interactive</h3>
-                                <p>A portfolio with interactive elements.</p>
-                                <div class="project-tags">
-                                    <span>HTML</span>
-                                    <span>CSS</span>
-                                    <span>Javascript</span>
+                <div class="project-carousel">
+                    <!-- Project Carousel Container -->
+                    <div class="catergory-projects" id="personal-portfolio">
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="portfolio.jp" alt="Portfolio Project 1">
                                 </div>
-                                <a href="#" class="project-link">View Project</a>
+                                <div class="project-info">
+                                    <h3>Personal Portfolio - Interactive</h3>
+                                    <p>A portfolio with interactive elements.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="portfolio.jp" alt="Portfolio Project 2">
+                                </div>
+                                <div class="project-info">
+                                    <h3>Personal Portfolio - Advance</h3>
+                                    <p>A portfolio with interactive elements and Animations.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="project-slide">
-                        <div class="project-card">
-                            <div class="project-thumbnail">
-                                <img src="portfolio.jp" alt="Portfolio Project 2">
-                            </div>
-                            <div class="project-info">
-                                <h3>Personal Portfolio - Advance</h3>
-                                <p>A portfolio with interactive elements and Animations.</p>
-                                <div class="project-tags">
-                                    <span>HTML</span>
-                                    <span>CSS</span>
-                                    <span>Javascript</span>
-                                </div>
-                                <a href="#" class="project-link">View Project</a>
-                            </div>
-                        </div>
-                    </div>
-                 </div>
+                </div>
             </div>
 
             <!-- Landing Pages Projects -->
