--- a/html/index.html
+++ b/html/index.html
@@ -263,11 +263,11 @@
                     <!-- Project Carousel Container -->
                     <div class="project-carousel">
                         <!-- Project Carousel Container -->
-                        <div class="catergory-projects" id="personal-portfolio">
+                        <div class="category-projects" id="personal-portfolio">
                             <div class="project-slide">
                                 <div class="project-card">
                                     <div class="project-thumbnail">
-                                        <img src="portfolio.jp" alt="Portfolio Project 1">
+                                        <img src="portfolio.jpg" alt="Portfolio Project 1">
                                     </div>
                                     <div class="project-info">
                                         <h3>Personal Portfolio - Interactive</h3>
@@ -284,7 +284,7 @@
                             <div class="project-slide">
                                 <div class="project-card">
                                     <div class="project-thumbnail">
-                                        <img src="portfolio.jp" alt="Portfolio Project 2">
+                                        <img src="portfolio.jpg" alt="Portfolio Project 2">
                                     </div>
                                     <div class="project-info">
                                         <h3>Personal Portfolio - Advance</h3>
@@ -301,14 +301,14 @@
                         </div>
 
                         <!-- Landing Pages Projects -->
-                        <div class="catergory-projects" id="landing-pages" style="display: none;">
+                        <div class="category-projects" id="landing-pages" style="display: none;">
                             <div class="project-slide">
                                 <div class="project-card">
-                                    <div class="project-thubmnail">
+                                    <div class="project-thumbnail">
                                         <img src="landingpage1.jpg" alt="Landing Page 1">
                                     </div>
                                     <div class="project-info">
-                                        <h3>Profuct Landing Page</h3>
+                                        <h3>Product Landing Page</h3>
                                         <p>A conversion-focused on landing page for product promotion.</p>
                                         <div class="project-tags">
                                             <span>HTML</span>
@@ -321,11 +321,11 @@
                             </div>
                             <div class="project-slide">
                                 <div class="project-card">
-                                    <div class="project-thubmnail">
+                                    <div class="project-thumbnail">
                                         <img src="landingpage2.jpg" alt="Landing Page 2">
                                     </div>
                                     <div class="project-info">
-                                        <h3>Profuct Landing Page</h3>
+                                        <h3>Product Landing Page</h3>
                                         <p>A conversion-focused on landing page for product promotion.</p>
                                         <div class="project-tags">
                                             <span>HTML</span>
@@ -339,11 +339,11 @@
                         </div>
 
                         <!-- Home Pages Projects -->
-                        <div class="catergory-projects" id="home-pages" style="display: none;">
+                        <div class="category-projects" id="home-pages" style="display: none;">
                             <div class="project-slide">
                                 <div class="project-card">
                                     <div class="project-thumbnail">
-                                        <img src="home1.jph" alt="Home Page 1">
+                                        <img src="home1.jpg" alt="Home Page 1">
                                     </div>
                                     <div class="project-info">
                                         <h3>Business Homepage</h3>
@@ -360,7 +360,7 @@
                             <div class="project-slide">
                                 <div class="project-card">
                                     <div class="project-thumbnail">
-                                        <img src="home1.jph" alt="Home Page 2">
+                                        <img src="home1.jpg" alt="Home Page 2">
                                     </div>
                                     <div class="project-info">
                                         <h3>Restaurant Homepage</h3>
@@ -386,7 +386,7 @@
                                     </div>
                                     <div class="project-info">
                                         <h3>Simple Message Board</h3>
-                                        <p>A PHP-base Message Board for the town community.</p>
+                                        <p>A PHP-based Message Board for the town community.</p>
                                         <div class="project-tags">
                                             <span>HTML</span>
                                             <span>CSS</span>
@@ -404,7 +404,7 @@
                                     </div>
                                     <div class="project-info">
                                         <h3>Simple Message Board</h3>
-                                        <p>A PHP-base Message Board for the town community.</p>
+                                        <p>A PHP-based Message Board for the town community.</p>
                                         <div class="project-tags">
                                             <span>HTML</span>
                                             <span>CSS</span>
