--- a/html/index.html
+++ b/html/index.html
@@ -260,165 +260,159 @@
 
             <!-- Right Side Project Display -->
             <div class="projects-display">
-                    <!-- Project Carousel Container -->
-                    <div class="project-carousel">
-                        <!-- Project Carousel Container -->
-                        <div class="category-projects" id="personal-portfolio">
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="portfolio.jpg" alt="Portfolio Project 1">
-                                    </div>
-                                    <div class="project-info">
-                                        <h3>Personal Portfolio - Interactive</h3>
-                                        <p>A portfolio with interactive elements.</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>Javascript</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
+                <!-- Project Carousel Container -->
+                <div class="project-carousel">
+                    <!-- Personal Portfolio Projects -->
+                    <div class="category-projects" id="personal-portfolio">
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="portfolio.jpg" alt="Portfolio Project 1">
                                 </div>
-                            </div>
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="portfolio.jpg" alt="Portfolio Project 2">
+                                <div class="project-info">
+                                    <h3>Personal Portfolio - Interactive</h3>
+                                    <p>A portfolio with interactive elements.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
                                     </div>
-                                    <div class="project-info">
-                                        <h3>Personal Portfolio - Advance</h3>
-                                        <p>A portfolio with interactive elements and Animations.</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>Javascript</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Landing Pages Projects -->
-                        <div class="category-projects" id="landing-pages" style="display: none;">
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="landingpage1.jpg" alt="Landing Page 1">
-                                    </div>
-                                    <div class="project-info">
-                                        <h3>Product Landing Page</h3>
-                                        <p>A conversion-focused on landing page for product promotion.</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>Javascript</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="portfolio.jpg" alt="Portfolio Project 2">
                                 </div>
-                            </div>
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="landingpage2.jpg" alt="Landing Page 2">
+                                <div class="project-info">
+                                    <h3>Personal Portfolio - Advance</h3>
+                                    <p>A portfolio with interactive elements and Animations.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
                                     </div>
-                                    <div class="project-info">
-                                        <h3>Product Landing Page</h3>
-                                        <p>A conversion-focused on landing page for product promotion.</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>Javascript</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Home Pages Projects -->
-                        <div class="category-projects" id="home-pages" style="display: none;">
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="home1.jpg" alt="Home Page 1">
-                                    </div>
-                                    <div class="project-info">
-                                        <h3>Business Homepage</h3>
-                                        <p>A professional home for small business</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>Javascript</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="home1.jpg" alt="Home Page 2">
-                                    </div>
-                                    <div class="project-info">
-                                        <h3>Restaurant Homepage</h3>
-                                        <p>A homepage design for restaurants</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>Javascript</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <!-- PHP Websites Projects -->
-                        <div class="category-projects" id="php-websites" style="display: none;">
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="php1.jpg" alt="PHP website 1">
-                                    </div>
-                                    <div class="project-info">
-                                        <h3>Simple Message Board</h3>
-                                        <p>A PHP-based Message Board for the town community.</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>PHP</span>
-                                            <span>MySQL</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="project-slide">
-                                <div class="project-card">
-                                    <div class="project-thumbnail">
-                                        <img src="php1.jpg" alt="PHP website 1">
-                                    </div>
-                                    <div class="project-info">
-                                        <h3>Simple Message Board</h3>
-                                        <p>A PHP-based Message Board for the town community.</p>
-                                        <div class="project-tags">
-                                            <span>HTML</span>
-                                            <span>CSS</span>
-                                            <span>PHP</span>
-                                            <span>MySQL</span>
-                                        </div>
-                                        <a href="#" class="project-link">View Project</a>
-                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-            
-
+                    <!-- Landing Pages Projects -->
+                    <div class="category-projects" id="landing-pages" style="display: none;">
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="landingpage1.jpg" alt="Landing Page 1">
+                                </div>
+                                <div class="project-info">
+                                    <h3>Product Landing Page</h3>
+                                    <p>A conversion-focused on landing page for product promotion.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="landingpage2.jpg" alt="Landing Page 2">
+                                </div>
+                                <div class="project-info">
+                                    <h3>Product Landing Page</h3>
+                                    <p>A conversion-focused on landing page for product promotion.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Home Pages Projects -->
+                    <div class="category-projects" id="home-pages" style="display: none;">
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="home1.jpg" alt="Home Page 1">
+                                </div>
+                                <div class="project-info">
+                                    <h3>Business Homepage</h3>
+                                    <p>A professional home for small business</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="home1.jpg" alt="Home Page 2">
+                                </div>
+                                <div class="project-info">
+                                    <h3>Restaurant Homepage</h3>
+                                    <p>A homepage design for restaurants</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>Javascript</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- PHP Websites Projects -->
+                    <div class="category-projects" id="php-websites" style="display: none;">
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="php1.jpg" alt="PHP website 1">
+                                </div>
+                                <div class="project-info">
+                                    <h3>Simple Message Board</h3>
+                                    <p>A PHP-based Message Board for the town community.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>PHP</span>
+                                        <span>MySQL</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-slide">
+                            <div class="project-card">
+                                <div class="project-thumbnail">
+                                    <img src="php1.jpg" alt="PHP website 1">
+                                </div>
+                                <div class="project-info">
+                                    <h3>Simple Message Board</h3>
+                                    <p>A PHP-based Message Board for the town community.</p>
+                                    <div class="project-tags">
+                                        <span>HTML</span>
+                                        <span>CSS</span>
+                                        <span>PHP</span>
+                                        <span>MySQL</span>
+                                    </div>
+                                    <a href="#" class="project-link">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- Carousel Navigation -->
                 <div class="carousel-navigation">
                     <button class="carousel-btn prev-btn" aria-label="Previous project">❮</button>
