--- a/html/index.html
+++ b/html/index.html
@@ -267,7 +267,7 @@
                         <div class="project-slide">
                             <div class="project-card">
                                 <div class="project-thumbnail">
-                                    <img src="portfolio.jpg" alt="Portfolio Project 1">
+                                    <img src="../upload/images/" alt="Portfolio Project 1">
                                 </div>
                                 <div class="project-info">
                                     <h3>Personal Portfolio - Interactive</h3>
