--- a/html/index.html
+++ b/html/index.html
@@ -284,7 +284,7 @@
                         <div class="project-slide">
                             <div class="project-card">
                                 <div class="project-thumbnail">
-                                    <img src="portfolio.jpg" alt="Portfolio Project 2">
+                                    <img src="../upload/images/" alt="Portfolio Project 2">
                                 </div>
                                 <div class="project-info">
                                     <h3>Personal Portfolio - Advance</h3>
