--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar">
         <div class="nav-container">
-            <div class="nav-bran">
+            <div class="nav-brand">
                 <img src="hondalogo.jpg" alt="Honda Logo" class="logo">
                 <span class="brand-text">HONDA</span>
             </div>
