--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -19,11 +19,11 @@
                 <span class="brand-text">HONDA</span>
             </div>
             <div class="nav-menu" id="nav-menu">
-                <a href="#home" class="navlink">Home</a>
-                <a href="#features" class="navlink">Features</a>
-                <a href="#specs" class="navlink">Specification</a>
-                <a href="#gallery" class="navlink">Gallery</a>
-                <a href="#contact" class="navlink">Contact</a>
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#features" class="nav-link">Features</a>
+                <a href="#specs" class="nav-link">Specification</a>
+                <a href="#gallery" class="nav-link">Gallery</a>
+                <a href="#contact" class="nav-link">Contact</a>
                 <a href="#" class="navlink cta-link">Book a Test Drive</a>
             </div>
             <div class="hamburger" id="hambuger">
