--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <!-- <img src="../../upload/images/hondacivic_hero.webp" alt="Honda Civic RS" class="car-image"> -->
+            <img src="../../upload/images/hondacivic_hero.webp" alt="Honda Civic RS" class="car-image">
             <div class="image-overlay"></div>
         </div>
         <div class="scroll-indicator">
