--- a/mock_website/html/hondacivicRS.html
+++ b/mock_website/html/hondacivicRS.html
@@ -24,7 +24,7 @@
                 <a href="#specs" class="nav-link">Specification</a>
                 <a href="#gallery" class="nav-link">Gallery</a>
                 <a href="#contact" class="nav-link">Contact</a>
-                <a href="#" class="navlink cta-link">Book a Test Drive</a>
+                <a href="#" class="nav-link cta-link">Book a Test Drive</a>
             </div>
             <div class="hamburger" id="hambuger">
                 <span></span>
